--- a/_includes/sgds-footer.html
+++ b/_includes/sgds-footer.html
@@ -12,7 +12,7 @@
         <div class="col is-3">
           <p class="has-text-white"><b>User Guides</b></p>
           <p>
-            <a href="/docs/getting-started/">Get started with Design System</a>
+            <a href="/components/getting-started/">Get started with Design System</a>
           </p>
           <p>
             <a href="https://github.com/GovTechSG/sgds/issues"
