--- a/_includes/visit-docs-section.html
+++ b/_includes/visit-docs-section.html
@@ -10,7 +10,7 @@
         </p>
         <a
           class="sgds-button is-white is-rounded"
-          href="/docs/"
+          href="/components/"
           >Visit components</a
         >
       </div>
