--- a/assets/custom-css/main.scss
+++ b/assets/custom-css/main.scss
@@ -13,6 +13,7 @@ $body-color: #323232;
 @import "sgds-syntax";
 @import "mobile-side-nav";
 @import "spinner";
+@import "grid";
 @import "docs";
 
 /* Keep footer at bottom of viewport if page isn't high enough */
