--- a/collections/_layout/container.html
+++ b/collections/_layout/container.html
@@ -99,9 +99,9 @@ icon: container
   but is especially useful as a direct child of:
 </p>
 <ul>
-  <li><a href="/docs/hero/">Hero</a></li>
-  <li><a href="/docs/section/">Section</a></li>
-  <li><a href="/docs/footer/">Footer</a></li>
+  <li><a href="/components/hero/">Hero</a></li>
+  <li><a href="/components/section/">Section</a></li>
+  <li><a href="/components/footer/">Footer</a></li>
 </ul>
 
 <hr />
