--- a/collections/_layout/grid.html
+++ b/collections/_layout/grid.html
@@ -270,7 +270,7 @@ icon: grid
         <span class="sgds-icon sgds-icon-expand-alt is-size-4"></span>
         <div class="sgds-notification-content">
             <small>You can combine the above modifier with responsiveness classes to hide/show elements.<br>
-                <a href="/docs/responsiveness/">See Responsiveness documentation</a>
+                <a href="/components/responsiveness/">See Responsiveness documentation</a>
             </small>
         </div>
     </div>
