--- a/collections/_layout/responsiveness.html
+++ b/collections/_layout/responsiveness.html
@@ -46,14 +46,14 @@ icon: container
 <h2>Overview</h2>
 
 <p>
-  Use responsive classes to define how the <a href="/docs/grid">grid</a> behaves at different screen sizes.
+  Use responsive classes to define how the <a href="/components/grid">grid</a> behaves at different screen sizes.
 </p>
 
 <hr />
 
 <h3>Breakpoints</h3>
 <p>
-  Under the <a href="/docs/grid">grid system</a>, each column's width can be defined for a
+  Under the <a href="/components/grid">grid system</a>, each column's width can be defined for a
   specific viewport size: <b>mobile, tablet, desktop, widescreen and fullhd</b>.
 </p>
 
@@ -94,7 +94,7 @@ icon: container
     <div class="sgds-notification-content">
       <small>
         Resize the browser to see how the columns respond to different screen sizes<br>
-        <a href="/docs/grid/">Learn more about the grid system</a>
+        <a href="/components/grid/">Learn more about the grid system</a>
       </small>
     </div>
   </div>
