--- a/_includes/import-scripts.html
+++ b/_includes/import-scripts.html
@@ -6,6 +6,6 @@
 <script src="/js/sgds.js"></script>
 <script src="/apps/build/main.js"></script>
 
-{% if page.url contains "/docs/" or page.url contains "/patterns/" %}
+{% if page.url contains "/components/" or page.url contains "/patterns/" %}
 <script src="/apps/build/docs.js"></script>
 {% endif %}
