--- a/_includes/sidenav-collection.html
+++ b/_includes/sidenav-collection.html
@@ -6,7 +6,7 @@ Get collection that current page belongs to, then group each document by their s
     {%- assign collectionName = page.collection -%}
     {%- assign filteredCollections = site.collections | where: "label", collectionName -%}
     {%- assign currentCollection = filteredCollections[0] -%}
-    {%- assign collectionCategories = currentCollection.docs | sort: "category" | group_by: "category" -%}
+    {%- assign collectionCategories = currentCollection.docs | group_by: "category" -%}
     {%- for category in collectionCategories -%} 
         {%- if category.name != '' -%}
         <li class="second-level-nav">
