--- a/_layouts/layout-default.html
+++ b/_layouts/layout-default.html
@@ -5,7 +5,7 @@
         {% seo %}
     </head>
     {% assign offset-dropdown = "" %}
-    {% if page.url contains '/docs/' or page.url contains '/patterns/' or page.url contains '/guides/' and page.title !='Guides' %}
+    {% if page.url contains '/components/' or page.url contains '/patterns/' or page.url contains '/guides/' and page.title !='Guides' %}
         {% assign offset-dropdown = "has-component-dropdown" %}
     {% endif %}
 
