Update components path and utilities. Fixes for sidenav

--- a/_includes/sgds-agencyhead.html
+++ b/_includes/sgds-agencyhead.html
@@ -95,7 +95,7 @@
 </div>
 
 {% comment %} Nav bar for mobile {% endcomment %}
-{% if page.url contains "/components/" or page.url contains "/guides/" or page.url contains "/patterns/" or page.url contains "/get-started/" %}
+{% if page.url contains "/components/" or page.url contains "/guides/" or page.url contains "/patterns/" or page.url contains "/get-started/" or page.url contains "/utilities/" %}
     {% if page.title != 'Guides' %}
         {% include mobile-nav.html %}
     {% endif %}
