--- a/_includes/import-scripts.html
+++ b/_includes/import-scripts.html
@@ -7,10 +7,11 @@
 <script src="/apps/build/main.js"></script>
 
 
-{% if page.url contains "/datepicker/" %}
-<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-{% endif %}
 
 {% if page.url contains "/docs/" or page.url contains "/patterns/" %}
 <script src="/apps/build/docs.js"></script>
+{% endif %}
+
+{% if page.url contains "/faqs/" %}
+
 {% endif %}
